# GameOfClicks

./: .gitignore  CMakeLists.txt  Makefile  README.md
Controller/: Main.cpp  ResourceManager.cpp  ResourceManager.h  ScreenManager.cpp  ScreenManager.h  StateController.cpp  StateController.h
Model/States/: BaseState.cpp  BaseState.h  HecticGame.cpp  HecticGame.h  MainMenu.cpp  MainMenu.h  RandomGame.cpp  RandomGame.h
Model/UI/: Button.cpp  Button.h
Model/Utility/: RandomGen.h
View/: Screen.cpp  Screen.h
include/: Application.h  Display.h  Game_State.h  RandomGame.h  SplashScreen.h
include/ResManagement/: Resource_Manager.h
src/: Application.cpp  CMakeLists.txt  Display.cpp  Game_State.cpp  Main.cpp  RandomGame.cpp  SplashScreen.cpp  main.cpp
src/Controller/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  StateController.cpp  StateController.h
src/Model/: CMakeLists.txt
src/Model/States/: BaseState.cpp  BaseState.h  CMakeLists.txt  HecticGame.cpp  HecticGame.h  MainMenu.cpp  MainMenu.h  RandomGame.cpp  RandomGame.h
src/Model/UI/: Button.cpp  Button.h  CMakeLists.txt
src/Model/Utility/: CMakeLists.txt  RandomGen.cpp  RandomGen.h
src/ResManagement/: Font_Manager.cpp  Resource_Manager.cpp  Sound_Manager.cpp  Texture_Manager.cpp
